--- a/public/.env
+++ b/public/.env
@@ -1,3 +1,3 @@
 SECRET_KEY="QAZpWSXolEDCikRFVujmTGByhn"
 MAIL_USERNAME="find.a.tutor.email@gmail.com"
-MAIL_PASSWORD="FindATutor!@#$"
+MAIL_PASSWORD="FindATutor!@#$%"
